changed the name to tool_box in every ipynb

--- a/simulation/simulation 2.ipynb
+++ b/simulation/simulation 2.ipynb
@@ -12,10 +12,10 @@
     "import math\n",
     "from pyitlib import discrete_random_variable as drv\n",
     "import sys\n",
-    "sys.path.insert(1, '/home/r7user5/Desktop/STAT')\n",
+    "sys.path.insert(1, '/Users/chengpeng/Desktop/Research/STAT/CIBer')\n",
     "import comonotonic as cm\n",
     "import random\n",
-    "import utils\n",
+    "import tool_box as tb\n",
     "from sklearn import preprocessing\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -197,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
