--- a/financial distress/financial distress (process train test seperately).ipynb
+++ b/financial distress/financial distress (process train test seperately).ipynb
@@ -67,7 +67,7 @@
     "from sklearn.model_selection import KFold\n",
     "from sklearn.metrics import accuracy_score\n",
     "import copy\n",
-    "import utils\n",
+    "import tool_box as tb\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.metrics import classification_report, roc_auc_score\n",
@@ -165,7 +165,7 @@
     "scaler = preprocessing.StandardScaler()\n",
     "scale_col_name = [\"X\"+str(i) for i in cont_col]\n",
     "df_train[scale_col_name] = scaler.fit_transform(df_train[scale_col_name])\n",
-    "reduced_df_train = utils.outlier_removal(df_train, cont_col)\n",
+    "reduced_df_train = tb.outlier_removal(df_train, cont_col)\n",
     "df_test[scale_col_name] = scaler.transform(df_test[scale_col_name])"
    ]
   },
@@ -215,7 +215,7 @@
     "ciber_predict = ciber.predict(x_test)\n",
     "ciber_proba = ciber.predict_proba(x_test)\n",
     "print(classification_report(y_test,ciber_predict))\n",
-    "print(utils.informational_loss(ciber_proba,y_test))"
+    "print(tb.informational_loss(ciber_proba,y_test))"
    ]
   },
   {
@@ -652,7 +652,7 @@
     }
    ],
    "source": [
-    "utils.informational_loss(xgb_proba, y_test)"
+    "tb.informational_loss(xgb_proba, y_test)"
    ]
   },
   {
