--- a/sensorless/sensorless change train size 0.5 0.6 0.7.ipynb
+++ b/sensorless/sensorless change train size 0.5 0.6 0.7.ipynb
@@ -27,7 +27,7 @@
     "from sklearn.model_selection import KFold\n",
     "from sklearn.metrics import accuracy_score\n",
     "import copy\n",
-    "import utils\n",
+    "import tool_box as tb\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.metrics import classification_report\n",
@@ -1137,7 +1137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
