--- a/simulation/a simple example (without proper discretization).ipynb
+++ b/simulation/a simple example (without proper discretization).ipynb
@@ -34,7 +34,7 @@
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import utils\n",
+    "import tool_box as tb\n",
     "from sklearn import preprocessing\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
@@ -1203,7 +1203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
