modified discretization part by the way in the book

--- a/CIBer_jmlr/main.tex
+++ b/CIBer_jmlr/main.tex
@@ -480,7 +480,7 @@ where $p_t$ is the probability that an arbitrary observation in $S$ belongs to c
 \begin{equation*}
     E(X_i,T_i;S)=\frac{|S_1|}{|S|}H(S_1)+\frac{|S_2|}{|S|}H(S_2).
 \end{equation*}
-Thus, for any continuous feature $X_i$, we can always find a threshold which minimizes the class information entropy and then complete a binary discretization. This leads to a divide-and-conquer approach in which we recursively discretize the two subsets after each binary discretization until some pre-specified stopping conditions are achieved. Inspired by \citet{fayyad1993multi}, in our implementation, we use the Minimal Description Length Principle (MDLP) to determine the stopping condition for the recursion. First of all, for any binary partition of a set of observations, we need the number of ways that the classese can present in the two subsets of observations. Suppose at some level during the recursion, we need to determine whether the partition should continue on a subset of observations $S^\prime\subseteq S$. Let $T^\prime$ be the number of classes in $S^\prime$, and $t_i^\prime$ be the number of classes in $S_i^\prime$ where $i\in\{1,2\}$. Furtherly, let $N=|S^\prime|$, the number of observations in $S^\prime$. Moreover, suppose $T_i^\prime$ is the decision threshold. For any class in the class set, it can present only in $S_1^\prime$, or only in $S_2^\prime$, or both. Now, denote $G_t^\prime$ as the number of all possible ways to ``locate'' each class in the two subsets, it satisfies:
+Thus, for any continuous feature $X_i$, we can always find a threshold which minimizes the class information entropy, and then achieve the first single division for the set of observations. This leads to a divide-and-conquer approach in which we recursively split each subset of observations into two by the same feature until a pre-specified stopping condition is satisfied. Inspired by \citet{fayyad1993multi}, in our implementation, we use the Minimal Description Length Principle (MDLP) to determine the stopping condition for the recursion. In general, under this criterion, we stop the splitting if the difference between the entropy of the set of observations and the class information entropy after splitting drops below a specific level. In order to achieve this, first of all, for any binary partition of a set of observations, we need the number of ways that the classese can present in the two subsets of observations. Suppose at some level during the recursion, we need to determine whether the partition should continue on a subset of observations $S^\prime\subseteq S$. Let $T^\prime$ be the number of classes in $S^\prime$, and $t_i^\prime$ be the number of classes in $S_i^\prime$ where $i\in\{1,2\}$. Furtherly, let $N=|S^\prime|$, the number of observations in $S^\prime$. Moreover, suppose $T_i^\prime$ is the decision threshold. For any class in the class set, it can present only in $S_1^\prime$, or only in $S_2^\prime$, or both. Now, denote $G_t^\prime$ as the number of all possible ways to ``locate'' each class in the two subsets, it satisfies:
 \begin{equation*}
 G_t^\prime==3^{T^\prime}-2
 \end{equation*}
